# ferris-scheduler

./: Cargo.toml  README.md
src/: lib.rs  prelude.rs
src/domain/: email_task.rs  mod.rs  task.rs
src/domain/port/: task_scheduler.rs
task_definition_macro/: Cargo.toml
task_definition_macro/src/: lib.rs
