[package]
name = "ferris-scheduler"
version = "0.1.0"
edition = "2021"

[lib]
name = "ferris_scheduler"
path = "src/lib.rs"

[dependencies]
task_definition_macro = { path = "./task_definition_macro" }
trailing_closure_macro = { git = "https://github.com/andrzejwitkowski/with_block_macro" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[workspace]
members = [
    ".",
    "task_definition_macro"
]
